Shaping the layout

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -9,9 +9,9 @@ $main-dark: #1d3e5a;
 $main-light: #39a9d3;
 $darkgrey: #464646;
 $dark: #323232;
-$red: #d11919;
-$red-light: #ff1919;
-$blue: #006bd5;
+$red: #710d10;
+$red-light: #be1d2c;
+$blue: #24aae1;
 $green: #2d9b3a;
 $orange: #ec761c;
 $grey: #bfbfbf;
