--- a/css/base.css
+++ b/css/base.css
@@ -463,3 +463,15 @@ table {
 .ie8 * {
   font-family: 'Trebuchet MS', arial, verdana !important;
 }
+
+/* line 1, ../sass/_layout.scss */
+.header {
+  background-color: #be1d2c;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#FF710D10', endColorstr='#FFBE1D2C');
+  background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, #710d10), color-stop(50%, #710d10), color-stop(51%, #be1d2c), color-stop(100%, #be1d2c));
+  background-image: -webkit-linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
+  background-image: -moz-linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
+  background-image: -o-linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
+  background-image: linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
+}
