Swapped around background colors and minor typographic settings

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,20 +1,38 @@
-.header {
-  // needs latest Compass, add '@import "compass"' to your scss
-  background-color: rgb(190, 29, 44);
-  // Old browsers
-  @include filter-gradient(#710d10, #be1d2c, horizontal);
-  // IE6-9
-  @include background-image(linear-gradient(left, rgb(113, 13, 16) 0%, rgb(113, 13, 16) 50%, rgb(190, 29, 44) 51%, rgb(190, 29, 44) 100%));
+* {
+  @include box-sizing(border-box);
 }
 
-.schedule {
+.drupalhagen {
+  background-color: $blue;
+  * {
+    color: white;
+  }
 
-}
+  .header {
+    padding-top: 50px;
+    min-height: 300px;
+    text-align: center;
+  }
 
-.venue {
+  .schedule {
+    min-height: 300px;
+    background-color: white;
+    * {
+      color: $text;
+    }
 
-}
+  }
 
-.footer {
+  .venue {
+    min-height: 300px;
+  }
 
+  .footer {
+    background-color: white;
+    min-height: 300px;
+    * {
+      color: $text;
+    }
+
+  }
 }
