--- a/css/base.css
+++ b/css/base.css
@@ -450,28 +450,57 @@ table {
   border-spacing: 0;
 }
 
-/* line 28, ../sass/_general.scss */
+/* line 1, ../sass/_layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+/* line 5, ../sass/_layout.scss */
+.drupalhagen {
+  background-color: #24aae1;
+}
+/* line 7, ../sass/_layout.scss */
+.drupalhagen * {
+  color: white;
+}
+/* line 11, ../sass/_layout.scss */
+.drupalhagen .header {
+  padding-top: 50px;
+  min-height: 300px;
+  text-align: center;
+}
+/* line 17, ../sass/_layout.scss */
+.drupalhagen .schedule {
+  min-height: 300px;
+  background-color: white;
+}
+/* line 20, ../sass/_layout.scss */
+.drupalhagen .schedule * {
+  color: #3a3a3a;
+}
+/* line 26, ../sass/_layout.scss */
+.drupalhagen .venue {
+  min-height: 300px;
+}
+/* line 30, ../sass/_layout.scss */
+.drupalhagen .footer {
+  background-color: white;
+  min-height: 300px;
+}
+/* line 33, ../sass/_layout.scss */
+.drupalhagen .footer * {
+  color: #3a3a3a;
+}
+
+/* line 28, ../sass/_general.scss */
+* {
   font-family: 'Roboto', 'Trebuchet MS', arial, verdana;
   font-weight: 400 !important;
-  color: #1d3e5a;
+  color: #3a3a3a;
 }
 /* line 3, ../sass/_general.scss */
 .ie8 * {
   font-family: 'Trebuchet MS', arial, verdana !important;
-}
-
-/* line 1, ../sass/_layout.scss */
-.header {
-  background-color: #be1d2c;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#FF710D10', endColorstr='#FFBE1D2C');
-  background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, #710d10), color-stop(50%, #710d10), color-stop(51%, #be1d2c), color-stop(100%, #be1d2c));
-  background-image: -webkit-linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
-  background-image: -moz-linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
-  background-image: -o-linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
-  background-image: linear-gradient(left, #710d10 0%, #710d10 50%, #be1d2c 51%, #be1d2c 100%);
 }
