--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,12 +15,8 @@
   }
 
   .schedule {
+    margin: 20px;
     min-height: 300px;
-    background-color: white;
-    * {
-      color: $text;
-    }
-
   }
 
   .venue {
@@ -28,11 +24,11 @@
   }
 
   .footer {
-    background-color: white;
     min-height: 300px;
-    * {
-      color: $text;
-    }
-
   }
+}
+
+.session {
+  width: 300px;
+  float: left;
 }
