--- a/sass/base.scss
+++ b/sass/base.scss
@@ -38,7 +38,7 @@
 @import "breakpoint";
 
 // Loading font, colors and mixins
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+// @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 
 @import "colors";
 @import "mixins";
