--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,7 +1,15 @@
+
+$grids: 12;
+$gutter-styles: 'split';
+
 * {
   @include box-sizing(border-box);
 }
 
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
 .drupalhagen {
   background-color: $blue;
   * {
@@ -9,18 +17,22 @@
   }
 
   .header {
-    padding-top: 50px;
-    min-height: 300px;
+    padding-top: 5em;
     text-align: center;
   }
 
   .schedule {
-    margin: 20px;
-    min-height: 300px;
+    @include clearfix;
   }
 
   .venue {
-    min-height: 300px;
+    @include clearfix;
+    margin-top: 50px;
+    border-top: 3px solid $main-dark;
+    iframe {
+      border: 0;
+    }
+
   }
 
   .footer {
@@ -28,7 +40,73 @@
   }
 }
 
+.drupalhagen-logo {
+  background-color: #aff;
+  /*background-image: url('');*/
+  height: 30px;
+  width: 30px;
+}
+
+.pane-system-main-menu {
+  float: right;
+}
+
+.topbar {
+  @include linkcolor(white, #bebebe, none);
+
+  position: fixed;
+  z-index: 10;
+  background-color: $main-dark;
+  width: 100%;
+  padding: 0 20px;
+
+  .panels-ipe-display-container & {
+    position: inherit;
+  }
+
+  nav,
+  .menu,
+  .pane-system-main-menu,
+  li {
+    display: inline-block;
+  }
+  .menu {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    li {
+      border-left: 1px solid #333;
+      line-height: 3em;
+      a {
+        padding: 1.3em 1.5em;
+      }
+
+    }
+  }
+}
+
+
+
+.slogan {
+  padding-left: 50px;
+  line-height: 50px;
+  display: inline-block;
+  color: white;
+  font-size: 0.7em;
+}
+
 .session {
-  width: 300px;
-  float: left;
+  @include float-span(4,1);
+}
+
+.button-ticket {
+  display: block;
+  padding: 20px;
+  font-size: 2em;
+  color: white;
+  background-color: $red-light;
+}
+
+.button-ticket:hover {
+  background-color: $red;
+  text-decoration: none;
 }
