--- a/sass/base.scss
+++ b/sass/base.scss
@@ -34,6 +34,7 @@
 @import "compass";
 @import "compass/utilities/sprites";
 @import "compass/css3";
+@import "compass/css3/font-face";
 @import "singularitygs";
 @import "breakpoint";
 
@@ -47,6 +48,7 @@
 @import "normalize";
 
 // Theme specific theming!
+@import "typography";
 @import "layout";
 @import "general";
 
