--- a/css/base.css
+++ b/css/base.css
@@ -1,636 +1,1 @@
-@charset "UTF-8";
-/**
- *
- * All styling should first be done as SASS and then compiled into CSS.
- * The following dependencies should be present at compile time
- *  - breakpoint (todo: verify name!)
- *  - singularitygs
- * For more information using SASS use google, it is recommended to use compass!
- *
- * You should have the following gems installed
- * gem install compass
- * gem install singularitygs
- * gem install breakpoint
- *
- * We have split our source up into several logical places in order to
- * lower inter-dependencies and increase reusability.
- *
- * _colors - All colors should be defined here and referenced through the rest.
- * _mixins - Reusable functions like size calculation, transitions etc.
- * _navigation - All general menu related.
- * _layout - Top level layout, more specific should be in sub-files.
- * _node-<bundle> - all specific styling for that node bundle.
- *
- * If for some reason it makes sense to split it out into a new file say
- * we have a menu that is only rendered that way in one specific spot
- * it should be put into it's own file with the file syntax like:
- *
- *   _navigation-myspecialmenu
- *
- *
- */
-/**
- * @file
- * A collection of different use-full mixins
- */
-/*! normalize.css v2.1.2 | MIT License | git.io/normalize */
-/* ==========================================================================
-   HTML5 display definitions
-   ========================================================================== */
-/**
- * Correct `block` display not defined in IE 8/9.
- */
-/* line 22, ../sass/_normalize.scss */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block;
-}
-
-/**
- * Correct `inline-block` display not defined in IE 8/9.
- */
-/* line 32, ../sass/_normalize.scss */
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-
-/**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-/* line 41, ../sass/_normalize.scss */
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/**
- * Address `[hidden]` styling not present in IE 8/9.
- * Hide the `template` element in IE, Safari, and Firefox < 22.
- */
-/* line 52, ../sass/_normalize.scss */
-[hidden],
-template {
-  display: none;
-}
-
-/* ==========================================================================
-   Base
-   ========================================================================== */
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
-/* line 66, ../sass/_normalize.scss */
-html {
-  font-family: sans-serif;
-  /* 1 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/**
- * Remove default margin.
- */
-/* line 76, ../sass/_normalize.scss */
-body {
-  margin: 0;
-}
-
-/* ==========================================================================
-   Links
-   ========================================================================== */
-/**
- * Remove the gray background color from active links in IE 10.
- */
-/* line 88, ../sass/_normalize.scss */
-a {
-  background: transparent;
-}
-
-/**
- * Address `outline` inconsistency between Chrome and other browsers.
- */
-/* line 96, ../sass/_normalize.scss */
-a:focus {
-  outline: thin dotted;
-}
-
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-/* line 105, ../sass/_normalize.scss */
-a:active,
-a:hover {
-  outline: 0;
-}
-
-/* ==========================================================================
-   Typography
-   ========================================================================== */
-/**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 118, ../sass/_normalize.scss */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/**
- * Address styling not present in IE 8/9, Safari 5, and Chrome.
- */
-/* line 127, ../sass/_normalize.scss */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/**
- * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 136, ../sass/_normalize.scss */
-b,
-strong {
-  font-weight: bold;
-}
-
-/**
- * Address styling not present in Safari 5 and Chrome.
- */
-/* line 144, ../sass/_normalize.scss */
-dfn {
-  font-style: italic;
-}
-
-/**
- * Address differences between Firefox and other browsers.
- */
-/* line 152, ../sass/_normalize.scss */
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-
-/**
- * Address styling not present in IE 8/9.
- */
-/* line 162, ../sass/_normalize.scss */
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-/**
- * Correct font family set oddly in Safari 5 and Chrome.
- */
-/* line 174, ../sass/_normalize.scss */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-
-/**
- * Improve readability of pre-formatted text in all browsers.
- */
-/* line 183, ../sass/_normalize.scss */
-pre {
-  white-space: pre-wrap;
-}
-
-/**
- * Set consistent quote types.
- */
-/* line 191, ../sass/_normalize.scss */
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-
-/**
- * Address inconsistent and variable font size in all browsers.
- */
-/* line 199, ../sass/_normalize.scss */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
-/* line 208, ../sass/_normalize.scss */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-/* line 215, ../sass/_normalize.scss */
-sup {
-  top: -0.5em;
-}
-
-/* line 219, ../sass/_normalize.scss */
-sub {
-  bottom: -0.25em;
-}
-
-/* ==========================================================================
-   Embedded content
-   ========================================================================== */
-/**
- * Remove border when inside `a` element in IE 8/9.
- */
-/* line 231, ../sass/_normalize.scss */
-img {
-  border: 0;
-}
-
-/**
- * Correct overflow displayed oddly in IE 9.
- */
-/* line 239, ../sass/_normalize.scss */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* ==========================================================================
-   Figures
-   ========================================================================== */
-/**
- * Address margin not present in IE 8/9 and Safari 5.
- */
-/* line 251, ../sass/_normalize.scss */
-figure {
-  margin: 0;
-}
-
-/* ==========================================================================
-   Forms
-   ========================================================================== */
-/**
- * Define consistent border, margin, and padding.
- */
-/* line 263, ../sass/_normalize.scss */
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-/* line 274, ../sass/_normalize.scss */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * 1. Correct font family not being inherited in all browsers.
- * 2. Correct font size not being inherited in all browsers.
- * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 288, ../sass/_normalize.scss */
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 2 */
-  margin: 0;
-  /* 3 */
-}
-
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-/* line 300, ../sass/_normalize.scss */
-button,
-input {
-  line-height: normal;
-}
-
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
- * Correct `select` style inheritance in Firefox 4+ and Opera.
- */
-/* line 312, ../sass/_normalize.scss */
-button,
-select {
-  text-transform: none;
-}
-
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
-/* line 327, ../sass/_normalize.scss */
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  /* 2 */
-  cursor: pointer;
-  /* 3 */
-}
-
-/**
- * Re-set default cursor for disabled elements.
- */
-/* line 337, ../sass/_normalize.scss */
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * 1. Address box sizing set to `content-box` in IE 8/9.
- * 2. Remove excess padding in IE 8/9.
- */
-/* line 347, ../sass/_normalize.scss */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
- *    (include `-moz` to future-proof).
- */
-/* line 358, ../sass/_normalize.scss */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  /* 2 */
-  box-sizing: content-box;
-}
-
-/**
- * Remove inner padding and search cancel button in Safari 5 and Chrome
- * on OS X.
- */
-/* line 371, ../sass/_normalize.scss */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-/* line 380, ../sass/_normalize.scss */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/**
- * 1. Remove default vertical scrollbar in IE 8/9.
- * 2. Improve readability and alignment in all browsers.
- */
-/* line 390, ../sass/_normalize.scss */
-textarea {
-  overflow: auto;
-  /* 1 */
-  vertical-align: top;
-  /* 2 */
-}
-
-/* ==========================================================================
-   Tables
-   ========================================================================== */
-/**
- * Remove most spacing between table cells.
- */
-/* line 403, ../sass/_normalize.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 5, ../sass/_layout.scss */
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 9, ../sass/_layout.scss */
-.container {
-  width: 960px;
-  margin: 0 auto;
-}
-
-/* line 13, ../sass/_layout.scss */
-.drupalhagen {
-  background-color: #24aae1;
-}
-/* line 15, ../sass/_layout.scss */
-.drupalhagen * {
-  color: white;
-}
-/* line 19, ../sass/_layout.scss */
-.drupalhagen .header {
-  padding-top: 5em;
-  text-align: center;
-}
-/* line 24, ../sass/_layout.scss */
-.drupalhagen .schedule {
-  /* for IE 6/7 */
-  *zoom: expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:both;font:0/0 serif");
-  /* non-JS fallback */
-  *zoom: 1;
-}
-/* line 48, ../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
-.drupalhagen .schedule:before, .drupalhagen .schedule:after {
-  content: ".";
-  display: block;
-  height: 0;
-  overflow: hidden;
-}
-/* line 55, ../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
-.drupalhagen .schedule:after {
-  clear: both;
-}
-/* line 28, ../sass/_layout.scss */
-.drupalhagen .venue {
-  /* for IE 6/7 */
-  *zoom: expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:both;font:0/0 serif");
-  /* non-JS fallback */
-  *zoom: 1;
-  margin-top: 50px;
-  border-top: 3px solid #1d3e5a;
-}
-/* line 48, ../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
-.drupalhagen .venue:before, .drupalhagen .venue:after {
-  content: ".";
-  display: block;
-  height: 0;
-  overflow: hidden;
-}
-/* line 55, ../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
-.drupalhagen .venue:after {
-  clear: both;
-}
-/* line 32, ../sass/_layout.scss */
-.drupalhagen .venue iframe {
-  border: 0;
-}
-/* line 38, ../sass/_layout.scss */
-.drupalhagen .footer {
-  min-height: 300px;
-}
-
-/* line 43, ../sass/_layout.scss */
-.drupalhagen-logo {
-  background-color: #aff;
-  /*background-image: url('');*/
-  height: 30px;
-  width: 30px;
-}
-
-/* line 50, ../sass/_layout.scss */
-.pane-system-main-menu {
-  float: right;
-}
-
-/* line 54, ../sass/_layout.scss */
-.topbar {
-  position: fixed;
-  z-index: 10;
-  background-color: #1d3e5a;
-  width: 100%;
-  padding: 0 20px;
-}
-/* line 29, ../sass/_mixins.scss */
-.topbar a {
-  color: white;
-  text-decoration: none;
-}
-/* line 33, ../sass/_mixins.scss */
-.topbar a:link {
-  color: white;
-}
-/* line 36, ../sass/_mixins.scss */
-.topbar a:visited {
-  color: white;
-}
-/* line 39, ../sass/_mixins.scss */
-.topbar a:focus {
-  color: #bebebe;
-}
-/* line 42, ../sass/_mixins.scss */
-.topbar a:hover {
-  color: #bebebe;
-  text-decoration: none;
-}
-/* line 63, ../sass/_layout.scss */
-.panels-ipe-display-container .topbar {
-  position: inherit;
-}
-/* line 70, ../sass/_layout.scss */
-.topbar nav,
-.topbar .menu,
-.topbar .pane-system-main-menu,
-.topbar li {
-  display: inline-block;
-}
-/* line 73, ../sass/_layout.scss */
-.topbar .menu {
-  -webkit-margin-before: 0;
-  -webkit-margin-after: 0;
-}
-/* line 76, ../sass/_layout.scss */
-.topbar .menu li {
-  border-left: 1px solid #333;
-  line-height: 3em;
-}
-/* line 79, ../sass/_layout.scss */
-.topbar .menu li a {
-  padding: 1.3em 1.5em;
-}
-
-/* line 89, ../sass/_layout.scss */
-.slogan {
-  padding-left: 50px;
-  line-height: 50px;
-  display: inline-block;
-  color: white;
-  font-size: 0.7em;
-}
-
-/* line 97, ../sass/_layout.scss */
-.session {
-  width: 31.66667%;
-  clear: right;
-  float: left;
-  margin-left: 0.83333%;
-  margin-right: 0.83333%;
-}
-
-/* line 101, ../sass/_layout.scss */
-.button-ticket {
-  display: block;
-  padding: 20px;
-  font-size: 2em;
-  color: white;
-  background-color: #be1d2c;
-}
-
-/* line 109, ../sass/_layout.scss */
-.button-ticket:hover {
-  background-color: #710d10;
-  text-decoration: none;
-}
-
-/* line 28, ../sass/_general.scss */
-* {
-  font-family: 'Roboto', 'Trebuchet MS', arial, verdana;
-  font-weight: 400 !important;
-  color: #3a3a3a;
-}
-/* line 3, ../sass/_general.scss */
-.ie8 * {
-  font-family: 'Trebuchet MS', arial, verdana !important;
-}
+@charset "UTF-8";/*! normalize.css v2.1.2 | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden],template{display:none}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}a{background:transparent}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:0.67em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em}pre{white-space:pre-wrap}q{quotes:"\201C" "\201D" "\2018" "\2019"}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:0}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.container{width:960px;margin:0 auto}.drupalhagen{background-color:#24aae1}.drupalhagen *{color:white}.drupalhagen .header{padding-top:5em;text-align:center}.drupalhagen .schedule{*zoom:expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:both;font:0/0 serif");*zoom:1}.drupalhagen .schedule:before,.drupalhagen .schedule:after{content:".";display:block;height:0;overflow:hidden}.drupalhagen .schedule:after{clear:both}.drupalhagen .venue{*zoom:expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:both;font:0/0 serif");*zoom:1;margin-top:50px;border-top:3px solid #1d3e5a}.drupalhagen .venue:before,.drupalhagen .venue:after{content:".";display:block;height:0;overflow:hidden}.drupalhagen .venue:after{clear:both}.drupalhagen .venue iframe{border:0}.drupalhagen .footer{min-height:300px}.drupalhagen-logo{background-color:#aff;height:30px;width:30px}.pane-system-main-menu{float:right}.topbar{position:fixed;z-index:10;background-color:#1d3e5a;width:100%;padding:0 20px}.topbar a{color:#fff;text-decoration:none}.topbar a:link{color:#fff}.topbar a:visited{color:#fff}.topbar a:focus{color:#bebebe}.topbar a:hover{color:#bebebe;text-decoration:none}.panels-ipe-display-container .topbar{position:inherit}.topbar nav,.topbar .menu,.topbar .pane-system-main-menu,.topbar li{display:inline-block}.topbar .menu{-webkit-margin-before:0;-webkit-margin-after:0}.topbar .menu li{border-left:1px solid #333;line-height:3em}.topbar .menu li a{padding:1.3em 1.5em}.slogan{padding-left:50px;line-height:50px;display:inline-block;color:white;font-size:0.7em}.session{width:31.66667%;clear:right;float:left;margin-left:0.83333%;margin-right:0.83333%}.button-ticket{display:block;padding:20px;font-size:2em;color:white;background-color:#be1d2c}.button-ticket :hover{background-color:#710d10;text-decoration:none}*{font-family:'Roboto', 'Trebuchet MS', arial, verdana;font-weight:400 !important;color:#3a3a3a}.ie8 *{font-family:'Trebuchet MS', arial, verdana !important}
