--- a/sass/base.scss
+++ b/sass/base.scss
@@ -37,6 +37,7 @@
 @import "compass/css3/font-face";
 @import "singularitygs";
 @import "breakpoint";
+@import 'bourbon/bourbon';
 
 // Loading font, colors and mixins
 // @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
@@ -51,6 +52,7 @@
 @import "typography";
 @import "layout";
 @import "general";
+@import "buttons";
 
 
 $experimental-support-for-svg: true
