--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,6 @@
 
 $grids: 12;
-$gutter-styles: 'split';
+//$gutter-styles: 'split';
 
 * {
   @include box-sizing(border-box);
@@ -97,5 +97,15 @@ $gutter-styles: 'split';
 
 .session {
   @include float-span(4,1);
+  .field-name-field-session-description {
+    display: none;
+  }
+  &:nth-of-type(1),
+  &:nth-of-type(3n+1) {
+    @include float-span(4, 'first');
+  }
+  &:nth-of-type(3n) {
+    @include float-span(4, 'last');
+  }
 }
 
